...
    final SearchArtifactsBloc bloc =
        BlocProvider.of<SearchArtifactsBloc>(context);

    return BlocBuilder<SearchArtifactsBloc, SearchArtifactsState>(
      builder: (context, state) => Scaffold(
        appBar: AppBar(
          title: Text('Search artifacts'),
        ),
        body: Column(
          children: <Widget>[
            Padding(
              padding: const EdgeInsets.all(16.0),
              child: TextField(
...
        ),
      );
    } else if (state is ArtifactResults) {
      return _buildArtifactsWidget(state, bloc);
    } else {
      return Expanded(
        child: Center(child: Text('Enter new query')),
      );
    }
  }

  Widget _buildArtifactsWidget(
    ArtifactResults state,
...
