...
  final bool showLoadMoreProgress;

  @override
  Widget build(BuildContext context) {
    if (artifacts.length == 0) {
      return Expanded(
        child: Center(child: Text('No items')),
      );
    } else {
      final listKey = Key('searchArtifactList');
      return Expanded(
        child: NotificationListener<ScrollNotification>(
          onNotification: (scrollInfo) {
...
